feat: add findById route and structures
